--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,20 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
 * {
   box-sizing: border-box;
+}
+body {
+  position: relative;
+  padding-top: 50px;
+  @apply bg-gray-100
+}
+html {
+  scroll-behavior: smooth;
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.loader {
+  @apply border-10 border-t-10  w-20 h-20 rounded-half animate-spin;
+  border-top-color: rgba(96, 165, 250, 1);
 }
